FIXED PUT to modify entries
